# base_web

./: Dockerfile  README.md  pyproject.toml
base_web/: __main__.py
base_web/application/: app.py
base_web/config/: global_settings.py
base_web/healthcheck_module/: controller.py  router.py
