[tool.poetry]
name = "base-web"
version = "0.1.0"
description = ""
authors = ["Kulakov Oleg <olegkulakov77@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
app = 'base_web.__main__:main'

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
loguru = "^0.7.3"
uvicorn = "^0.34.2"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
